crates/eure-macros/tests/compile_fail/allow_unknown_fields_on_unit_variant.rs
use eure::FromEure;

#[derive(FromEure)]
enum Test {
    #[eure(allow_unknown_fields)]
    Unit,
}

fn main() {}
